--- a/Q9.ipynb
+++ b/Q9.ipynb
@@ -559,9 +559,42 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Pergunta: Quais desafios foram encontrados no treinamento? Como melhorar o desempenho do\n",
+        "modelo"
+      ],
       "metadata": {
         "id": "jZaFPCstIPqH"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "t1JbRk3bImWV"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "O maior desafio foi o resultado de apresentação do projeto, pois muitas vezes teve qque se modificado por causa da baixa taxa de acerto"
+      ],
+      "metadata": {
+        "id": "95c2oETCImvk"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "A melhoria deve focar em aumentar a capacidade de extração de características da rede e garantir a estabilidade do treino."
+      ],
+      "metadata": {
+        "id": "UuZUAcQRLK3R"
       }
     }
   ],
@@ -569,7 +602,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNher7K+fqPLlBNofvK3Ae1",
+      "authorship_tag": "ABX9TyP90uhxfaS3T8B8v/tC0Rqq",
       "include_colab_link": true
     },
     "kernelspec": {
