--- a/Q10.ipynb
+++ b/Q10.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPRZOPlhE6Oo8g/wxrbt+OZ",
+      "authorship_tag": "ABX9TyN3iJa6MSWrv0Kz4unFq/+h",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5062,6 +5062,24 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Qual modelo apresentou a menor margem de erro? Quais variáveis tiveram maior impacto nas previsões?\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "O melhor foi o modelo de arvore de decisão,\n",
+        "\n",
+        "as variáveis que mais tiveram importância foram\n",
+        "Numero_Clientes e Gastos_Publicidades\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "IKBPgo_6AuV0"
+      }
     }
   ]
 }
