--- a/Q8.ipynb
+++ b/Q8.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNeeslraVEB4vD3Ib5qC33I",
+      "authorship_tag": "ABX9TyPIRGV1/8TWztGQ2X6dKkJM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,7 +51,7 @@
         "id": "Y7KbMggL7iBW",
         "outputId": "6f90ee7d-c8bc-4647-967b-79b70a34d5ee"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -160,7 +160,7 @@
       "metadata": {
         "id": "w2i8eOQL1OT6"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -176,7 +176,7 @@
         },
         "outputId": "40b2786f-bece-4c9b-acbc-8233d3528dd5"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -583,7 +583,7 @@
         "id": "--4Gf7ddqtJG",
         "outputId": "4649d9ac-3526-4228-fe25-327f165bbefb"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -652,7 +652,7 @@
         "id": "h8CL8aaQtlSe",
         "outputId": "653bb38a-20cf-4a94-c2bd-d18f0e24cee0"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -709,7 +709,7 @@
           "height": 349
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -923,7 +923,7 @@
         "id": "jRG2SjlZqhfa",
         "outputId": "61b44c37-8d8b-41c2-b760-f9a06cce90dc"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1147,6 +1147,22 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Pergunta: Quais desafios foram encontrados no treinamento? Como melhorar o desempenho do modelo?\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "Esparsidade dos Dados.\n",
+        "\n",
+        "Utilizar Fatoração Matricial Avançada: Aplicar algoritmos como SVD (Singular Value Decomposition), que são explicitamente projetados para lidar com matrizes esparsas e aprender \"features latentes\" (gostos implícitos) dos usuários."
+      ],
+      "metadata": {
+        "id": "Lrd4oWuXB0ZQ"
+      }
     }
   ]
 }
