--- a/Q8.ipynb
+++ b/Q8.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPIRGV1/8TWztGQ2X6dKkJM",
+      "authorship_tag": "ABX9TyNYRmxffw9rrLD/XXu/waev",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1151,14 +1151,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Pergunta: Quais desafios foram encontrados no treinamento? Como melhorar o desempenho do modelo?\n",
-        "\n",
+        "Pergunta: Qual abordagem foi mais eficiente na recomendação de filmes? Como melhorar o sistema de recomendação?\n",
         "\n",
         "---\n",
         "\n",
-        "Esparsidade dos Dados.\n",
+        "Filtragem Colaborativa Baseada em Item (Item-Based)\n",
         "\n",
-        "Utilizar Fatoração Matricial Avançada: Aplicar algoritmos como SVD (Singular Value Decomposition), que são explicitamente projetados para lidar com matrizes esparsas e aprender \"features latentes\" (gostos implícitos) dos usuários."
+        "Implementar um Sistema Híbrido: Em vez de depender apenas das notas (filtragem colaborativa), o sistema deve também usar metadados (filtragem baseada em conteúdo). Isso significa incluir informações como gênero, atores, diretor e ano do filme. Essa abordagem ajuda a recomendar itens para novos usuários e a recomendar novos filmes (resolvendo o problema do \"cold start\")."
       ],
       "metadata": {
         "id": "Lrd4oWuXB0ZQ"
