--- a/Q8.ipynb
+++ b/Q8.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNYRmxffw9rrLD/XXu/waev",
+      "authorship_tag": "ABX9TyPsLWlmLCkxCTSieKi7QMQN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1157,7 +1157,7 @@
         "\n",
         "Filtragem Colaborativa Baseada em Item (Item-Based)\n",
         "\n",
-        "Implementar um Sistema Híbrido: Em vez de depender apenas das notas (filtragem colaborativa), o sistema deve também usar metadados (filtragem baseada em conteúdo). Isso significa incluir informações como gênero, atores, diretor e ano do filme. Essa abordagem ajuda a recomendar itens para novos usuários e a recomendar novos filmes (resolvendo o problema do \"cold start\")."
+        "Implementar um Sistema Híbrido: Em vez de depender apenas das notas (filtragem colaborativa), o sistema deve também usar metadados (filtragem baseada em conteúdo). Isso significa incluir informações como gênero, atores, diretor e ano do filme. Essa abordagem ajuda a recomendar itens para novos usuários e a recomendar novos filmes."
       ],
       "metadata": {
         "id": "Lrd4oWuXB0ZQ"
