--- a/Q9.ipynb
+++ b/Q9.ipynb
@@ -18,7 +18,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c19cbced-5275-47c0-f966-1febf6f4ccd4"
+        "outputId": "f1dbc8ea-3e26-482d-c253-755f4fbf63e5"
       },
       "outputs": [
         {
@@ -50,7 +50,6 @@
         "# --- Bibliotecas para Manipulação e Análise de Dados ---\n",
         "import pandas as pd\n",
         "import numpy as np\n",
-        "\n",
         "import tensorflow as tf\n",
         "from tensorflow.keras.models import Sequential\n",
         "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Dense, Dropout, BatchNormalization\n",
@@ -59,7 +58,6 @@
         "from sklearn.metrics import classification_report, confusion_matrix\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
-        "import numpy as np\n",
         "import os\n",
         "\n",
         "\n"
@@ -94,7 +92,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9df19f04-ac72-495a-cd12-d2d161ec662e"
+        "outputId": "a6be7d0c-b608-4d1d-eae8-d46419135a60"
       },
       "outputs": [
         {
@@ -104,6 +102,7 @@
             "Casos Normais no Treino: 1341\n",
             "Casos de Pneumonia no Treino: 3875\n",
             "\n",
+            "total_samples\n",
             "Peso para a classe Normal (0): 1.94\n",
             "Peso para a classe Pneumonia (1): 0.67\n",
             "\n"
@@ -132,7 +131,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "csSzbSxvdxJA",
         "colab": {
@@ -183,7 +182,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "nmzSK3jDd1TT",
         "colab": {
@@ -336,7 +335,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "KdqM1WTFd3uK",
         "colab": {
@@ -390,7 +389,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -479,7 +478,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "wi65NjyOd8yO",
         "colab": {
@@ -582,7 +581,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "O balanceamento de classe, pois muitas vezes teve que se modificado por causa da baixa taxa de acerto"
+        "O balanceamento de classe"
       ],
       "metadata": {
         "id": "95c2oETCImvk"
@@ -602,7 +601,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOBv17ctUiHAcuCtNi2lRPi",
+      "authorship_tag": "ABX9TyOYQT83Grzg6s/61t5p9bah",
       "include_colab_link": true
     },
     "kernelspec": {
